--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@/*": [
        "src/app/*"
       ],
-    }
+    },
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
