--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "ng-keyboard-shortcuts": "^10.1.17",
+    "ngx-bootstrap": "^7.0.0",
+    "ngx-toastr": "^14.1.0",
+    "ngx-translate": "0.0.1-security",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
